ops/k8s/networkpolicies/allow-ingress-to-services.yaml
# Allow ingress-nginx to reach only frontend and gateway pods
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-to-frontend-gateway
  namespace: ecom
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: ["frontend","gateway"]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
