ops/k8s/networkpolicies/default-deny.yaml
# Default deny all ingress and egress within ecom namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: ecom
spec:
  podSelector: {}
  policyTypes: ["Ingress","Egress"]
